# Jtu

./: .gitignore  Cargo.toml  build.bat
src/: annotation.rs  app.rs  app_capture.rs  clipboard.rs  hotkeys.rs  main.rs  pin.rs  settings.rs  theme.rs  tray.rs  win_utils.rs
src/capture/: dxgi.rs  mod.rs
src/overlay/: drawing.rs  input.rs  mod.rs  selection.rs  toolbar.rs  widgets.rs
src/tools/: arrow.rs  blur.rs  ellipse.rs  eraser.rs  mod.rs  pen.rs  rect.rs  text.rs
src/win_overlay/: gdi.rs  mod.rs  toolbar.rs
