[package]
name = "snapvault"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Cross-platform screenshot & clipboard manager"

[dependencies]
xcap = "0.8"
arboard = "3.6"
global-hotkey = "0.7"
tray-icon = "0.21"
image = { version = "0.25", features = ["png"] }
rfd = "0.15"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
] }
windows = { version = "0.61", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
] }

[profile.release]
opt-level = 3
lto = true
strip = true
